Fix bug with height of images on safari
Safari has default property stretch on flex images,
so we need to override it with flex-start

--- a/public/styles/_home.scss
+++ b/public/styles/_home.scss
@@ -95,10 +95,11 @@
     .mobile_bg_container{
         width: 100%;
         display: flex;
-        justify-content: flex;
+        align-items: flex-start;
         margin-top: 5em;
             & img{
                 max-width: 100%;
+                height: auto;
             }
     }
 }
