--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -524,13 +524,14 @@ body, html {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: flex;
-        -ms-flex-pack: flex;
-            justify-content: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     margin-top: 5em;
   }
   .mobile_bg_container img {
     max-width: 100%;
+    height: auto;
   }
 }
 
@@ -930,6 +931,9 @@ body, html {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .offers_container .offers div span span div {
@@ -974,6 +978,7 @@ body, html {
 .offers_container .offers div span img {
   max-width: 100%;
   min-width: 100%;
+  height: auto;
   -webkit-transition: opacity 500ms linear;
   transition: opacity 500ms linear;
 }
